fix: floaty right align

--- a/assets/scss/floaty.scss
+++ b/assets/scss/floaty.scss
@@ -2,7 +2,7 @@
 
 a.float {
 	position:fixed;
-	width:42px;
+	width:24px;
 	height:42px;
 	bottom:12px;
 	right:12px;
